fix post and comment overflows

--- a/css/forum-style.css
+++ b/css/forum-style.css
@@ -1,12 +1,14 @@
-body{
-    overflow:hidden;
-}
-
 #main-content{
+    overflow: hidden;
+    height: 100%;
     width:100%;
     margin: 0 auto;
     padding: 0;
     display: flex;
+}
+
+#header,#footer{
+    flex-shrink: 0;
 }
 
 button{
@@ -43,18 +45,31 @@ textarea{
 }
 
 #left-divider{
+    overflow: hidden;
+    height:100%;
     width: 45%;
     padding-top: 10px;
+    padding-bottom: 24px;
     border-right: 2px solid var(--secondary-color);
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#forum-posts-overflow{
+#forum-posts{
+    height:100%;
+    overflow: hidden;
+    padding-bottom: 24px;
+}
+
+#forum-posts-overflow, #forum-comments-overflow{
+    height: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
-    height: 76.3vh;
+}
+
+#forum-comments-overflow{
+    padding-bottom: 24px;
 }
 
 .post-card{
@@ -76,11 +91,21 @@ textarea{
 }
 
 #right-divider{
+    height:100%;
+    overflow: hidden;
     padding-top: 20px;
     padding-left:24px;
+    padding-right: 12px;
     width: 55%;
 }
 
+#forum-post-view{
+    height:100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 24px;
+}
 
 #right-divider h3{
     font-size: var(--huge-font-size);
