--- a/css/general-style.css
+++ b/css/general-style.css
@@ -25,6 +25,7 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;  /* Make the body as high as the window */
+    height:100vh;
     margin: 0; 
 
     font-family: 'Roboto', sans-serif;
